# gpt-image-2-client

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_tauri.command  build_tauri_windows.command  index.html  package-lock.json  package.json
scripts/: sync-version.mjs  修复应用已损坏.command
src/: App.tsx  api.ts  constants.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  FestivalRail.tsx  GenerateView.tsx  TaskResultGrid.tsx
