[package]
name = "phantom_image_client"
version = "1.0.7"
description = "幻影畅享版"
authors = ["幻影畅享版"]
edition = "2021"

[lib]
name = "phantom_image_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
mime_guess = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
urlencoding = "2"
walkdir = "2"
